hphp/hack/test/typecheck/shape/shape_typeconst2.php
<?hh

class C {
  const FOO_KEY = 'FOO';
  const type TShape = shape(
    C::FOO_KEY => string,
    'bar' => int,
    'baz' => bool,
  );
}
